--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#"><i class="header_hamburger fas fa-bars"></i></a>
             </div>
             <ul class="header_navigation-hidden">
-                <li><a href="#section_header">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#section_about">About</a></li>
                 <li><a href="#section_menu">Menu</a></li>
                 <li><a href="#section_reviews">Reviews</a></li>
@@ -32,11 +32,10 @@
             </ul>
             <div class="header_heading-box">
                 <div class="header_logo-box">
-                    <i class="header_logo_coffee-icon fas fa-mug-hot"></i>
-                    <h1 class="header_logo-heading">Fairy<span>Coffee</span></h1>
+                    <h1 class="header_logo-heading">Fairy<span>Coffee</span><i class="header_logo_coffee-icon fas fa-mug-hot"></i></h1>
                 </div>
                 <ul class="header_navigation">
-                    <li><a href="#section_header">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#section_about">About</a></li>
                     <li><a href="#section_menu">Menu</a></li>
                     <li><a href="#section_reviews">Reviews</a></li>
