--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="FairyCoffee - imaginary coffee shop.">
 
     <title>Fairy Coffee</title>
 
