--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer_content_left">
-                <p class="footer_copyright_text">&copy; 2020 FairyCoffee</p>
+                <p class="footer_copyright_text">&copy; 2020 Patrik Pavlisko</p>
             </div>
             <div class="footer_content_right">
                 <a href="#/"><i class="fab fa-facebook-f"></i></a>
